--- a/templates/workInduction.html
+++ b/templates/workInduction.html
@@ -64,7 +64,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="end_date">Resolved Date</label>
+          <label for="end_date">Resolved Date(Optional)</label>
           <input
             type="date"
             class="form-control"
