--- a/templates/workInfo.html
+++ b/templates/workInfo.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">WORK INFO</h5>
+            <h3 class="card-title" style="text-align: center;">WORK INFO</h3>
             <form method = "POST">
                 <div class="form-group">
                 <label for="Ref_ID">Reference ID</label>
@@ -24,59 +24,65 @@
                         name="end_date"
                     />
                 </div>
-                <div class="form-group">
-                    <label for="action_required">Action Required</label>
-                    <input
-                        type="text"
-                        class="form-control"
-                        id="action_required"
-                        name="action_required"
-                    />
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="action_required">Action Required</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="action_required"
+                            name="action_required"
+                        />
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="action_taken">Action Taken</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="action_taken"
+                            name="action_taken"
+                        />
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="action_taken">Action Taken</label>
-                    <input
-                        type="text"
-                        class="form-control"
-                        id="action_taken"
-                        name="action_taken"
-                    />
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="assigned_to">Assigned To</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="assigned_to"
+                            name="assigned_to"
+                        />
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="reviewer">Reviewer</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="reviewer"
+                            name="reviewer"
+                        />
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="assigned_to">Assigned To</label>
-                    <input
-                        type="text"
-                        class="form-control"
-                        id="assigned_to"
-                        name="assigned_to"
-                    />
-                </div>
-                <div class="form-group">
-                    <label for="reviewer">Reviewer</label>
-                    <input
-                        type="text"
-                        class="form-control"
-                        id="reviewer"
-                        name="reviewer"
-                    />
-                </div>
-                <div class="form-group">
-                    <label for="project_manager">Project Manager</label>
-                    <input
-                        type="text"
-                        class="form-control"
-                        id="project_manager"
-                        name="project_manager"
-                    />
-                </div>
-                <div class="form-group">
-                    <label for="project_lead">Project Lead</label>
-                    <input
-                        type="text"
-                        class="form-control"
-                        id="project_lead"
-                        name="project_lead"
-                    />
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="project_manager">Project Manager</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="project_manager"
+                            name="project_manager"
+                        />
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="project_lead">Project Lead</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="project_lead"
+                            name="project_lead"
+                        />
+                    </div>
                 </div>
                 <input type="submit" value = "UPDATE" class="btn btn-outline-info"></input>           
             </form>
