--- a/templates/home.html
+++ b/templates/home.html
@@ -96,7 +96,7 @@
                         name="Ref_ID"
                     />
                 </div>
-                <input type="submit" value = "RESULTS" class="btn btn-outline-primary"></input>           
+                <input type="submit" value = "GENERATE RESULTS" class="btn btn-outline-primary"></input>           
             </form>
         </div>
     </div>
