--- a/templates/home.html
+++ b/templates/home.html
@@ -9,13 +9,12 @@
             <form method = "POST">
                 <div class="form-group">
                 <label for="project_name">Project</label>
-                <input
-                    type="text"
-                    class="form-control"
-                    id="project_name"
-                    name="project_name"
-                    placeholder="Project Name"
-                />
+                <select class="form-control" id="project_name" name = "project_name">
+                    <option></option>
+                    <option>WM Support</option>
+                    <option>RCT Support</option>
+                    <option>JoW</option>
+                </select>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
