--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+  <img src="/static/logo1.png" width="30" height="30" class="d-inline-block align-top" style="margin-right: 10px;">
   <a class="navbar-brand" href="./">Total Process Manager</a>
   <button
     class="navbar-toggler"
