--- a/templates/workInduction.html
+++ b/templates/workInduction.html
@@ -79,7 +79,7 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="gtin">GTIN</label>
-            <input type="number" class="form-control" name="gtin" id="gtin" />
+            <input type="number" class="form-control" name="gtin" id="gtin" placeholder="Enter 14 digit GTIN"/>
           </div>
           <div class="form-group col-md-6">
             <label for="vendor_id">Vendor ID</label>
@@ -97,5 +97,6 @@
     </div>
   </div>
 </div>
+<script src = "static/validator.js"></script>
 
 {% endblock %}
