--- a/templates/home.html
+++ b/templates/home.html
@@ -101,6 +101,6 @@
     </div>
 </div>
 
-<script src = "static/validator.js"></script>
+<script src = "static/validator_home.js"></script>
 
 {%endblock%}
