--- a/templates/workInduction.html
+++ b/templates/workInduction.html
@@ -97,6 +97,6 @@
     </div>
   </div>
 </div>
-<script src = "static/validator.js"></script>
+<script src = "static/validator_ind.js"></script>
 
 {% endblock %}
