--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <div class="card">
         <div class="card-body">
             <h3 class="card-title" style="text-align: center;">SEARCH</h3>
-            <form method = "POST" novalidate>
+            <form method = "POST">
                 <div class="form-group">
                 <label for="project_name">Project</label>
                 <select class="form-control" id="project_name" name = "project_name">
