--- a/templates/workInfo.html
+++ b/templates/workInfo.html
@@ -13,6 +13,7 @@
                     id="Ref_ID"
                     name="Ref_ID"
                     placeholder="Enter Reference ID of the item to be updated......"
+                    required
                 />
                 </div>
                 <div class="form-group">
