--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="card">
         <div class="card-body">
-            <h3 class="card-title" style="text-align: center;">SEARCH</h3>
+            <h3 class="card-title" style="text-align: center;">PRODUCT OPERATIONS</h3>
             <form method = "POST">
                 <div class="form-group">
                 <label for="project_name">Project</label>
