--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -33,7 +33,7 @@
 <script>
     document.getElementsByTagName("table")[0].setAttribute("id", "tableID")
     function toExcel() {
-        var tab_text = "<table border='2px'><tr bgcolor='#87AFC6'>";
+        var tab_text = "<table border='2px solid #000000'><tr bgcolor='#87AFC6'>";
         var textRange; var j = 0;
         tab = document.getElementById('tableID'); // id of table
 
