--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -24,6 +24,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="workInfo">Work Info</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="qms">QMS</a>
       </li>        
     </ul>
   </div>
