--- a/templates/qms.html
+++ b/templates/qms.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}
 {%block body%}
 <div class="container">
-    <div class="card border-danger">
+    <div class="card">
         <div class="card-body">
-            <h3 class="card-title" style="text-align: center;">DELETE ITEM</h3>
+            <h3 class="card-title" style="text-align: center;">QMS</h3>
             <form method = "POST">
                 <div class="form-group">
                 <label for="Ref_ID">Reference ID</label>
@@ -12,11 +12,11 @@
                     class="form-control"
                     id="Ref_ID"
                     name="Ref_ID"
-                    placeholder="Enter Reference ID of the item to be deleted......"
+                    placeholder="Enter Reference ID of the item......"
                 />
                 </div>
-                <input type="submit" value = "Delete" class="btn btn-outline-warning"></input>            
-                <a href="/workInd" class = "btn btn-outline-secondary">Back</a>
+                <input type="submit" value = "GO" class="btn btn-outline-primary"></input>            
+                <a href="/" class = "btn btn-outline-secondary">HOME</a>
             </form>
         </div>
     </div>
