--- a/templates/status.html
+++ b/templates/status.html
@@ -28,8 +28,8 @@
                     />
                 </div>
                 <div class="form-group">
-                    <label for="gtin_stat">Status</label>
-                    <select class="form-control" id="gtin_stat" name = "gtin_stat" required>
+                    <label for="status">Status</label>
+                    <select class="form-control" id="status" name = "status" required>
                         <option></option>
                         <option>Success</option>
                         <option>Erred</option>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="form-group">
                     <label for="action">Action Required</label>
-                    <select class="form-control" id="action" name = "action" required>
+                    <select class="form-control" id="action_required" name = "action_required" required>
                         <option></option>
                         <option>Complete</option>
                         <option>Need Info</option>
