--- a/templates/qms.html
+++ b/templates/qms.html
@@ -4,19 +4,28 @@
     <div class="card">
         <div class="card-body">
             <h3 class="card-title" style="text-align: center;">QMS</h3>
+            <br>
             <form method = "POST">
-                <div class="form-group">
-                <label for="Ref_ID">Reference ID</label>
-                <input
-                    type="text"
-                    class="form-control"
-                    id="Ref_ID"
-                    name="Ref_ID"
-                    placeholder="Enter Reference ID of the item......"
-                />
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                    <label for="Ref_ID">Reference ID</label>
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="Ref_ID"
+                        name="Ref_ID"
+                        placeholder="Enter Reference ID of the item......"
+                    />
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="option">Select Type</label>
+                        <select class="form-control" id="option" name = "option" required>
+                            <option>Update</option>
+                            <option>Review</option>
+                        </select>
+                    </div>
                 </div>
                 <input type="submit" value = "GO" class="btn btn-outline-primary"></input>            
-                <a href="/" class = "btn btn-outline-secondary">HOME</a>
             </form>
         </div>
     </div>
