--- a/templates/qms.html
+++ b/templates/qms.html
@@ -18,7 +18,7 @@
                     />
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="option">Select Type</label>
+                        <label for="option">Status Update/Review</label>
                         <select class="form-control" id="option" name = "option" required>
                             <option>Update</option>
                             <option>Review</option>
