--- a/templates/workInduction.html
+++ b/templates/workInduction.html
@@ -64,7 +64,7 @@
               class="form-control"
               name="start_date"
               id="start_date"
-            />
+            required/>
           </div>
           <div class="form-group col-md-6">
             <label for="end_date">Resolved Date(Optional)</label>
