--- a/templates/status.html
+++ b/templates/status.html
@@ -36,16 +36,27 @@
                         <option>WIP</option>
                     </select>
                 </div>
-                <div class="form-group">
-                    <label for="action">Action Required</label>
-                    <select class="form-control" id="action_required" name = "action_required" required>
-                        <option></option>
-                        <option>Complete</option>
-                        <option>Need Info</option>
-                        <option>Unresolved</option>
-                        <option>WIP</option>
-                        <option>Rework</option>
-                    </select>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="action">Action Required</label>
+                        <select class="form-control" id="action_required" name = "action_required" required>
+                            <option></option>
+                            <option>Complete</option>
+                            <option>Need Info</option>
+                            <option>Unresolved</option>
+                            <option>WIP</option>
+                            <option>Rework</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="action_taken">Action Taken</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="action_taken"
+                            name="action_taken"
+                        />
+                    </div>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" required>
