--- a/templates/workInfo.html
+++ b/templates/workInfo.html
@@ -24,30 +24,10 @@
                         id="end_date"
                         name="end_date"
                     />
-                </div>
+                </div>                
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="action_required">Action Required</label>
-                        <input
-                            type="text"
-                            class="form-control"
-                            id="action_required"
-                            name="action_required"
-                        />
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="action_taken">Action Taken</label>
-                        <input
-                            type="text"
-                            class="form-control"
-                            id="action_taken"
-                            name="action_taken"
-                        />
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="assigned_to">Assigned To</label>
+                        <label for="assigned_to">Assigned To/Owner</label>
                         <input
                             type="text"
                             class="form-control"
