--- a/templates/report.html
+++ b/templates/report.html
@@ -6,12 +6,23 @@
             <h3 class="card-title" style="text-align: center;">Report</h3>
             <br>
             <form method="POST">
-                <div class="form-group">
-                    <label for="option">Report Type</label>
-                    <select class="form-control" id="option" name = "option" required>
-                        <option>Submission Report</option>
-                        <option>Accuracy Report</option>
-                    </select>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="option">Report Type</label>
+                        <select class="form-control" id="option" name = "option" required>
+                            <option>Submission Report</option>
+                            <option>Accuracy Report</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="Ref_ID">Ref_ID</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="Ref_ID"
+                            name="Ref_ID"
+                        />
+                    </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-4">
