change in report module

--- a/templates/report.html
+++ b/templates/report.html
@@ -15,7 +15,7 @@
                         </select>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="Ref_ID">Ref_ID</label>
+                        <label for="Ref_ID">Reference ID</label>
                         <input
                             type="text"
                             class="form-control"
