--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -29,7 +29,7 @@
         <a class="nav-link" href="qms">QMS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="report">Reports</a>
+        <a class="nav-link" href="report">Report</a>
       </li>        
     </ul>
   </div>
